@@ -971,19 +971,19 @@ public class CheckConfigurationConfigureDialog extends TitleAreaDialog {
         switch (columnIndex) {
 
           case 0:
-            text = new String();
+            text = "";
             break;
           case 1:
-            text = module.getName() != null ? module.getName() : new String();
+            text = module.getName() != null ? module.getName() : "";
             break;
           case 2:
-            text = module.getSeverity() != null ? module.getSeverity().name() : new String();
+            text = module.getSeverity() != null ? module.getSeverity().name() : "";
             break;
           case 3:
-            text = module.getComment() != null ? module.getComment() : new String();
+            text = module.getComment() != null ? module.getComment() : "";
             break;
           default:
-            text = new String();
+            text = "";
             break;
         }
       }
@@ -996,8 +996,8 @@ public class CheckConfigurationConfigureDialog extends TitleAreaDialog {
     @Override
     public Comparable<?> getComparableValue(Object element, int col) {
       if (element instanceof Module && col == 0) {
-        return Severity.ignore.equals(((Module) element).getSeverity()) ? new Integer(0)
-                : new Integer(1);
+        return Severity.ignore.equals(((Module) element).getSeverity()) ? Integer.valueOf(0)
+                : Integer.valueOf(1);
       }
 
       return getColumnText(element, col);
